--- a/styles.css
+++ b/styles.css
@@ -18,12 +18,48 @@ body {
   display: flex;
   flex-direction: column;
   max-width: fit-content;
+  margin: 50px 0 0 50px;
 }
 
 #canvas {
   border: 1px solid black;
   cursor: crosshair;
   background-color: white;
+}
+
+#imageControls {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 12px;
+  margin: 8px 0;
+}
+
+#imageControls button {
+  padding: 4px 8px;
+  border: none;
+  border-radius: 4px;
+  background-color: #d6d3d3;
+  transition: all 0.2s ease-in-out;
+}
+
+#imageControls button:not(:disabled):hover {
+  background-color: #b3b0b0;
+  cursor: pointer;
+}
+
+#upload-button {
+  padding: 4px 8px;
+  border: 1px solid black;
+  border-radius: 4px;
+  background-color: #d6d3d3;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+#upload-button:hover {
+  background-color: #b3b0b0;
 }
 
 #controls {
